# BPlusTree3

./: .gitignore  CLAUDE.md  COMPLETE_BENCHMARK_GUIDE.md  COPY_PASTE_DETECTOR_SUMMARY.md  CROSS_LANGUAGE_ANALYSIS.md  Cargo.toml  LICENSE  MANUAL_BENCHMARKS.md  RANGE_QUERY_OPTIMIZATION_PLAN.md  README.md  START_RUST_BENCHMARK.md  UPDATED_COPY_PASTE_ANALYSIS.md  analyze_programming_time.py  arena_abstraction_example.rs  benchmark_report.md  benchmark_results.json  claude_refactoring.md  commits.txt  demo_benchmark_report.md  demo_benchmark_results.json  plan.md  quick_bench.rs  range_optimization_benchmark  range_optimization_benchmark.rs  range_optimization_poc.rs  simple_time_analysis.py  test_coverage_analysis.md  updated_abstraction_examples.rs  visualize_programming_time.py
.claude/: settings.local.json  system_prompt_additions.md
.github/workflows/: build-wheels.yml  debug-build.yml  performance-tracking.yml  python-ci.yml  python-tests.yml  python-wheels.yml  release.yml  rust-ci.yml
benches/: comparison.rs
c/: Makefile  quick_test.sh  run_all_tests.sh  simple_test_runner.sh
c/benchmarks/: benchmark_comparison.c
c/src/: bplustree.c  bplustree.h
c/tests/: test_advanced.c  test_adversarial_edge_cases.c  test_basic.c  test_bug_reproduction.c  test_comprehensive_memory_safety.c  test_concurrent_modification.c  test_critical_bug.c  test_enhanced_error_handling.c  test_fuzz.c  test_tree_invariant_validation.c
docs/: PERFORMANCE_BENCHMARKS.md  arena-allocation-learnings.md  code_coverage_analysis.md  codex_refactoring.md  optimal_capacity_analysis.md  parallel_vectors_vs_entries.md  rust_performance_history.md
examples/: capacity_analysis_detailed.rs  quick_perf.rs  range_syntax_demo.rs  readme_examples.rs  traversal_demo.rs
go/: README.md  go.mod
go/benchmark/: benchmark_test.go  comparison_test.go
go/test/: iterator_safety_test.go  stress_test.go
python/: .coverage.MacBook-Pro-2.local.6886.XUgoFKtx  CHANGELOG.md  MANIFEST.in  README.md  __init__.py  bplus_tree.py  conftest.py  coverage.xml  pyproject.toml  setup.py
python/benchmarks/: performance_benchmark.py
python/bplustree/: __init__.py
python/bplustree3/: __init__.py  bplus_tree.py
python/bplustree_c_src/: bplustree.h  bplustree_module.c  node_ops.c  tree_ops.c
python/docs/: API_REFERENCE.md  CAPACITY_OPTIMIZATION_ANALYSIS.md  C_EXTENSION_SEGFAULT_FIX.md  GA_READINESS_PLAN.md  LOOKUP_PERFORMANCE_ANALYSIS.md  PERFORMANCE_HISTORY.md  PERFORMANCE_OPTIMIZATION_PLAN.md  THREAD_SAFETY.md  advanced_usage.md  installation.md  migration_guide.md  performance_guide.md  quickstart.md  troubleshooting.md
python/examples/: basic_usage.py  migration_guide.py  performance_demo.py  range_queries.py
python/python/benchmarks/: comprehensive_benchmark.py  performance_profiler.py  track_performance.py
python/python/docs/: RELEASE_PROCESS.md  optimization_guide.md
python/python/scripts/: release.py
python/tests/: __init__.py  _invariant_checker.py  comprehensive_fuzz_test.py  fuzz_test.py  test_bplus_tree.py  test_c_extension.py  test_c_extension_comprehensive.py  test_c_extension_segfault_fix.py  test_compile_flags.py  test_data_alignment.py  test_dictionary_api.py  test_docstyle.py  test_fuzz_discovered_patterns.py  test_gc_support.py  test_gprof_harness.py  test_import_error_fallback.py  test_invariant_bug.py  test_iterator.py  test_iterator_modification_safety.py  test_leak_detection.py  test_max_occupancy_bug.py  test_memory_leaks.py  test_multithreaded_lookup.py  test_no_segfaults.py  test_node_split_minimal.py  test_optimized_bplus_tree.py  test_performance_baseline.py  test_performance_benchmarks.py  test_performance_regression.py  test_performance_vs_sorteddict.py  test_prefetch_microbench.py  test_proper_deletion.py  test_segfault_regression.py  test_single_array_int_optimization.py  test_single_child_parent.py  test_stress_edge_cases.py  test_stress_large_datasets.py
python/tmp/: xcrun_db
rust/: Cargo.toml  PERFORMANCE_LOG.md  README.md  baseline_performance.txt
rust/benches/: comparison.rs  profiling_benchmark.rs  quick_clone_bench.rs  simple_comparison.rs
rust/docs/: BENCHMARK_RESULTS.md  CODE_DUPLICATION_ANALYSIS.md  COPY_PASTE_DETECTOR_SUMMARY.md  PROJECT_STATUS.md  RANGE_OPTIMIZATION_SUMMARY.md  TEST_RELIABILITY_PLAN.md  UPDATED_COPY_PASTE_ANALYSIS.md  arena-allocation-learnings.md  arena_migration_plan.md  code_coverage_analysis.md  codex_refactoring.md  concurrency_locking_strategies.md
rust/examples/: capacity_analysis_detailed.rs  capacity_test.rs  find_optimal_capacity.rs  quick_perf.rs  range_syntax_demo.rs  readme_examples.rs
rust/src/: arena.rs  lib.rs  macros.rs
rust/tests/: adversarial_arena_corruption.rs  adversarial_branch_rebalancing.rs  adversarial_edge_cases.rs  adversarial_linked_list.rs  bplus_tree.rs  bug_reproduction_tests.rs  critical_bug_test.rs  debug_infinite_loop.rs  enhanced_error_handling.rs  error_handling_consistency.rs  fuzz_tests.rs  linked_list_corruption_detection.rs  memory_leak_detection.rs  memory_safety_audit.rs  range_bounds_syntax.rs  remove_operations.rs  simple_bug_tests.rs  specific_bug_demos.rs  test_utils.rs
scripts/: README.md  analyze_benchmarks.py  background_rust_bench.py  benchmark_visualizer.py  check_and_run.py  cross_language_analysis.py  cross_language_comparison.py  demo_benchmark_runner.py  run_all_benchmarks.py  test_rust_install.py  test_with_simulated_rust.py
src/: lib.rs
src/python/: .gitignore  COMPETITIVE_ADVANTAGES.md  LOOKUP_PERFORMANCE_ANALYSIS.md  OPTIMIZATION_RESULTS.md  PERFORMANCE_IMPROVEMENT_PLAN.md  README.md  README_benchmark.md  __init__.py  _invariant_checker.py  before_after_comparison.py  benchmark.py  benchmark_binary_search.py  bplus_tree.py  bplus_tree_optimized.py  bplus_tree_switchable.py  bulk_loading_benchmark.py  competitive_benchmarks.py  comprehensive_fuzz_test.py  (+24 more)
tests/: adversarial_arena_corruption.rs  adversarial_branch_rebalancing.rs  adversarial_linked_list.rs  bplus_tree.rs  fuzz_tests.rs  helper_apis.rs  remove_operations.rs  test_utils.rs
zig/: .gitignore  README.md  build.zig
(+71 files in other folders)
