[workspace]
members = ["rust"]
resolver = "2"

[workspace.package]
version = "0.9.0"
authors = ["Kent Beck <kent@kentbeck.com>"]
license = "MIT"
repository = "https://github.com/KentBeck/BPlusTree"
edition = "2021"

[workspace.dependencies]
rand = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }
paste = "1.0"