[build-system]
requires = ["setuptools>=64", "wheel", "Cython>=0.29.30"]
build-backend = "setuptools.build_meta"

[project]
name = "bplustree3"
version = "0.1.0"
description = "High-performance B+ Tree implementation for Python with dict-like API"
readme = "README.md"
authors = [
    {name = "Kent Beck", email = "kent@kentbeck.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Data Structures",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: C",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
keywords = [
    "btree",
    "bplustree", 
    "b+tree",
    "data-structure",
    "database",
    "indexing",
    "performance",
    "range-query",
    "ordered-dict",
    "sorted-dict"
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]
benchmark = [
    "sortedcontainers>=2.4.0",
]

[project.urls]
Homepage = "https://github.com/KentBeck/BPlusTree3"
Documentation = "https://github.com/KentBeck/BPlusTree3/tree/main/python"
Repository = "https://github.com/KentBeck/BPlusTree3"
Issues = "https://github.com/KentBeck/BPlusTree3/issues"
Changelog = "https://github.com/KentBeck/BPlusTree3/blob/main/python/CHANGELOG.md"

[tool.setuptools]
py-modules = ["bplus_tree"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.h", "*.c"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true