[package]
name = "bplustree"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A high-performance B+ tree implementation in Rust with dict-like API"
license.workspace = true
repository.workspace = true
keywords = ["btree", "data-structures", "database", "indexing", "performance"]
categories = ["data-structures", "algorithms"]
readme = "README.md"

[features]
default = []
testing = []

[dependencies]
paste.workspace = true

[dev-dependencies]
criterion.workspace = true
rand.workspace = true

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "quick_clone_bench"
harness = false

[[bench]]
name = "profiling_benchmark"
harness = false

[[bench]]
name = "simple_comparison"
harness = false